[package]
name = "solana-th-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "2.1.6"
solana-transaction-status = "2.1.6"
solana-sdk = "2.1.6"
spl-token = "5.0.2"
spl-associated-token-account = "6.0.0"
mpl-token-metadata = "5.1.0"
serde = { version = "1.0.216", features = ["derive"] }
csv = "1.3.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"]}
tokio = { version = "1.42.0", features=["full"]}
env_logger = "0.11.5"
log = "0.4.22"
anyhow = "1.0.94"
serde_json = "1.0.134"